--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "A Python implementation of Stata's outreg2 for exporting regressi
 readme = "README.md"
 requires-python = ">=3.7"
 license = "MIT"
+license-files = ["LICENSE"]
 authors = [
     {name = "Bryce Wang", email = "brycew6m@stanford.edu"}
 ]
